--- a/index.html
+++ b/index.html
@@ -86,42 +86,42 @@
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-            <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-screen-smartphone"></i>
+            <!>
+              <i class=""></i>
             </span>
             <h4>
-              <strong>Responsive</strong>
+              <strong></strong>
             </h4>
-            <p class="text-faded mb-0">Looks great on any screen size!</p>
+            <p class="text-faded mb-0"></p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-            <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-pencil"></i>
+            <span class="">
+              <i class=""></i>
             </span>
             <h4>
-              <strong>Redesigned</strong>
+              <strong></strong>
             </h4>
-            <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+            <p class="text-faded mb-0">.</p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-            <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-like"></i>
+            <!>
+              <i class=""></i>
             </span>
             <h4>
-              <strong>Favorited</strong>
+              <!>
             </h4>
-            <p class="text-faded mb-0">Millions of users
-              <i class="fa fa-heart"></i>
-              Start Bootstrap!</p>
+            <p class="text-faded mb-0">
+              <i class=""></i>
+             </p>
           </div>
           <div class="col-lg-3 col-md-6">
-            <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-mustache"></i>
+            <span class="">
+              <!></i>
             </span>
             <h4>
-              <strong>Question</strong>
+              <!>
             </h4>
-            <p class="text-faded mb-0">I mustache you a question...</p>
+            <!></p>
           </div>
         </div>
       </div>
